Closed
Bug 237686
Opened 22 years ago
Closed 22 years ago
MVS, OS/390 compatability
Categories
(Core Graveyard :: Networking: FTP, defect)
Core Graveyard
Networking: FTP
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.7final
People
(Reporter: darin.moz, Assigned: darin.moz)
Details
Attachments
(1 file)
|
1.26 KB,
patch
|
darin.moz
:
review+
bzbarsky
:
superreview+
asa
:
approval1.7+
|
Details | Diff | Splinter Review |
IBM bug report:
> The old Netscape Communicator, MS Internet Explorer, etc. all work without any
> problems with these servers. Even the command line FTP clients (and OS/2's
> FTPPM client) have no problems. Only Mozilla chokes when I try to access the
> FTP server on the mainframe. This is the message I get:
>
> The FTP Server 215 MVS is the operating system of this server. FTP Server is
> running on OS/390. is currently unsupported.
dougt wrote:
> Assuming that the this OS / ftpd produces unix style list output, just add a
> "MVS" to line 1197 of nsFtpConnectionThread.cpp.
>
> Ideally, we would like to default any unknown server types to UNIX, but in the
> past that caused problems.
Here's part of the corresponding FTP log:
0[233fb0]: (26194d8)(dwait=0) Writing "SYST^M
"
0[233fb0]: (26194d8) Waiting for control data (0)...
0[233fb0]: (26194d8) reading 82 bytes: "215 MVS is the operating system of this
server. FTP Server is running on OS/390.^M
"
0[233fb0]: (26194d8) FTP_ERROR - Calling StopProcessing
I think dougt's conclusion is correct. I'll write up a patch.
| Assignee | ||
Comment 1•22 years ago
|
||
Treat both "MVS" and "OS/390" as UNIX. The server tag is confusing. It claims
to be both MVS and OS/390, and from what I've read they really are one in the
same. However, I'm not sure that there aren't cases where only "MVS" appears
but not "OS/390" and vice versa. So, this patch checks for the presense of
either substring.
| Assignee | ||
Comment 2•22 years ago
|
||
I think we should ideally make the parser more robust (so it does not crash on
bad input) and then default every unknown server type to UNIX.
| Assignee | ||
Updated•22 years ago
|
Attachment #144062 -
Flags: review?(dougt)
Comment 3•22 years ago
|
||
Comment on attachment 144062 [details] [diff] [review]
v1 patch
mServerType matters if it is VMS. Maybe we should just have the default case
set mServerType to UNIX and drop the dialog.
I remember this causing regressions, but what we have now is just a bandaide.
If you want this for 1.7b or 1.7, r=. if this is for 1.8, I think we should
just removing this cruft and fix the parser.
Attachment #144062 -
Flags: review?(dougt)
Comment 4•22 years ago
|
||
FYI: there were crashes in the parser because of using "UNIX" for all unkown
servers. dougt disabled the UNIX fallback and added this dialog (bug 84472).
We have also other open bugs with unkown servers (bug 202730)
| Assignee | ||
Comment 5•22 years ago
|
||
I'd like to extend the bandaide for 1.7
Target Milestone: --- → mozilla1.7beta
| Assignee | ||
Comment 6•22 years ago
|
||
Comment on attachment 144062 [details] [diff] [review]
v1 patch
marking r=dougt for 1.7 based on comment #3.
Attachment #144062 -
Flags: superreview?(bzbarsky)
Attachment #144062 -
Flags: review+
| Assignee | ||
Comment 7•22 years ago
|
||
for 1.8 alpha, i'm all for removing this cruft and trying to fix the parser.
Comment 8•22 years ago
|
||
Comment on attachment 144062 [details] [diff] [review]
v1 patch
sr=bzbarsky
Attachment #144062 -
Flags: superreview?(bzbarsky) → superreview+
| Assignee | ||
Updated•22 years ago
|
Attachment #144062 -
Flags: approval1.7?
| Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Target Milestone: mozilla1.7beta → mozilla1.7final
Comment 9•22 years ago
|
||
Comment on attachment 144062 [details] [diff] [review]
v1 patch
a=asa (on behalf of drivers) for checkin to 1.7
Attachment #144062 -
Flags: approval1.7? → approval1.7+
| Assignee | ||
Comment 10•22 years ago
|
||
fixed-on-trunk for 1.7 final
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 11•22 years ago
|
||
is there a public URL for this, I'd like to verify for 1.7
Summary: Mozilla cannot browse FTP server running under MVS, OS/390 → MVS, OS/390 compatability
Updated•2 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•