fixes bug 237686 "Mozilla cannot browse FTP server running under MVS, OS/390" r=dougt sr=bzbarsky a=asa